# kafka-study

./: .gitignore  README.md  docker-compose.yaml
basic-consumer/: Cargo.toml
basic-consumer/src/: main.rs
basic-producer/: Cargo.toml
basic-producer/src/: main.rs
