[package]
name = "basic-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"]}
tokio = { version = "1", features = ["full"]}
log = "0.4"
env_logger = "0.11.5"
uuid = { version = "1", features = ["v4"]}
